footer fix alignment

--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -8,6 +8,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    @media screen and (max-width: 379px) {
+      width: 100%;
+      }
 
     .socialIcons {
       display: flex;
